protocolmodel/mcrl2/testing/errors/error_3002.mcf
% E3002 - No mutually supported cryptosuite
[true* . LOG_ERROR(E3002)] false
